# JPE_circuit_model

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  MAC_LTSPICE_SOLUTION.md  README.md  README_JA.md  WINE_LTSPICE_INSTALLATION_GUIDE.md  WINE_LTSPICE_INSTALLATION_GUIDE_JA.md  pyproject.toml  requirements.txt  run_edit_simple_resonant.sh
data/: dc_sweep_processed.txt  dc_sweep_processed_RC.txt
examples/: JPE_3stacks.asc  JPE_3stacks_RC.asc  JPE_3stacks_RC_modified.asc  JPE_3stacks_RC_modified.net  simple_resonant.asc  simple_resonant_modified.asc  simple_resonant_test.net
fitting/: R_int_fitting.py  __init__.py  fitting.py  io.py  model.py  plot.py  solvers.py
fitting/R_int/: __init__.py  fitting.py  io.py  main.py  model.py  plot.py  processing.py  solvers.py
fitting/R_int_fitting/: main.py  plot.py  processing.py  solvers.py
fitting/antenna_param_fit/: fitting.py  io.py  main.py  plot.py
fitting/antenna_params/utils/: fitting.py  io.py  plot.py
fitting/antenna_params/with_L/: main.py  model.py
fitting/antenna_params/without_L/: main.py  model.py
models/: 1stack.asc  1stack.asy  1stack_RC.asc  1stack_RC.asy
post_processing/: __init__.py  phase_analysis.py  time_averaging.py
python-integration/: edit_jpe_3stacks_rc.py
python_integration/: edit_jpe_3stacks.py  edit_jpe_3stacks_rc.py  edit_simple_resonant.py  utils.py
results/: simple_resonant_modified_1.asc
simulation/: JPE_3stacks_RC_modified_1.asc  JPE_3stacks_RC_modified_1.fail  JPE_3stacks_RC_modified_1.net
simulation/simple_resonant/: simple_resonant_modified_1.asc  simple_resonant_modified_1.net  simple_resonant_modified_1.op.raw  simple_resonant_modified_1.raw
