[tool.poetry]
name        = "jpe-circuit-model"
version     = "0.1.0"
description = ""
authors     = ["Ryota Kobayashi <s.woods.m.29@gmail.com>"]

[tool.poetry.dependencies]
python             = "^3.11"
lmfit              = "^1.3.3"
matplotlib         = "^3.10.1"
numpy              = "^2.2.5"
pandas             = "^2.2.3"
pandas-stubs       = "^2.2.3.250308"
polars             = "^1.29.0"
plotly             = "^6.0.1"
kupicelib          = { path = "./kupicelib", develop = true }
kuPyLTSpice        = { path = "./kuPyLTSpice", develop = true }
cespy              = { path = "./cespy", develop = true }
docformatter       = "^1.7.7"
# autopep8 removed from main deps

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
black    = "^23.1.0"
flake8   = "^7.1.0"
mypy     = "^1.5.1"
pytest   = "^7.4.0"

[build-system]
requires    = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
